Criando e finalizando a página Torta de Frutas

--- a/PadariaDelicioPao/tortinhadefrutas.html
+++ b/PadariaDelicioPao/tortinhadefrutas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Doces - Padaria Delicio Pão</title>
+        <title>Tortinha de Frutas - Padaria Delicio Pão</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="padaria.css">
@@ -44,72 +44,35 @@
                 </form>
             </div>
         </nav>
-        <header class="header text-center py-5">
-            <h1 class="cursive-text">Doces</h1>
-        </header>
-        <main class="container mt-4">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/donuts-de-morango.jpg" class="card-img-top" alt="Donuts">
-                        <div class="card-body">
-                            <h5 class="card-title">Donuts</h5>
-                            <p class="card-text">Deliciosos e macios, com coberturas coloridas.</p>
-                            <a href="donuts.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/tortinha.jpg" alt="Tortinha de Frutas" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/sonho.jpg" class="card-img-top" alt="Sonho">
-                        <div class="card-body">
-                            <h5 class="card-title">Sonho</h5>
-                            <p class="card-text">Recheado com creme ou doce de leite, irresistível.</p>
-                            <a href="sonho.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
+                <h1 class="cursive-text mb-4">Tortinha de Frutas</h1>
+                <p class="lead">Uma deliciosa tortinha com uma combinação de frutas frescas e creme suave!</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>A tortinha de frutas é uma sobremesa encantadora que combina uma massa crocante e leve com um recheio suave de creme. As frutas frescas de diversas variedades, como morangos, kiwis, uvas e outras, são colocadas por cima, criando uma explosão de sabores e texturas. É perfeita para quem ama frutas e doces leves!</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Sabores</h4>
+                            <p>Frutas variadas (morango, kiwi, uva, manga, etc.).</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>R$ 6,00 por unidade.</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/cupcake.jpg" class="card-img-top" alt="Cupcake">
-                        <div class="card-body">
-                            <h5 class="card-title">Cupcake</h5>
-                            <p class="card-text">Pequeno e elegante, perfeito para qualquer ocasião.</p>
-                            <a href="cupcake.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/brigadeiro.jpg" class="card-img-top" alt="Brigadeiro">
-                        <div class="card-body">
-                            <h5 class="card-title">Brigadeiro</h5>
-                            <p class="card-text">Clássico doce brasileiro, delicioso e irresistível.</p>
-                            <a href="brigadeiro.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/pudim.jpg" class="card-img-top" alt="Pudim">
-                        <div class="card-body">
-                            <h5 class="card-title">Pudim</h5>
-                            <p class="card-text">Uma sobremesa cremosa com calda de caramelo.</p>
-                            <a href="pudim.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="img/tortinha.jpg" class="card-img-top" alt="Tortinha de Frutas">
-                        <div class="card-body">
-                            <h5 class="card-title">Tortinha de Frutas</h5>
-                            <p class="card-text">Leve, crocante e decorada com frutas frescas.</p>
-                            <a href="tortinhadefrutas.html" class="btn btn-outline-dark">Mais informações</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </section>
+            <section class="text-center mt-5">
+                <a href="doces.html" class="btn btn-outline-dark">Voltar para os Doces</a>
+            </section>
         </main>
         <footer class="footer">
             <div class="container py-4">
