--- a/PadariaDelicioPao/donuts.html
+++ b/PadariaDelicioPao/donuts.html
@@ -44,3 +44,58 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/donuts-de-morango.jpg" alt="Donuts" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                </div>
+                <h1 class="cursive-text mb-4">Donuts</h1>
+                <p class="lead">Macios, saborosos e com coberturas irresistíveis.</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>Nossos donuts são preparados com massa aerada e macia, fritos na medida certa e cobertos com uma variedade de sabores como chocolate, morango e caramelo.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Sabores</h4>
+                            <p>Chocolate, morango, doce de leite e baunilha.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>R$ 5,00 por unidade.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+    
+            <section class="text-center mt-5">
+                <a href="doces.html" class="btn btn-outline-dark">Voltar para os Doces</a>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Sobre Nós</h5>
+                        <p>Na Delicio Pão, oferecemos produtos artesanais frescos todos os dias. Nosso compromisso é com a qualidade e o sabor.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contato</h5>
+                        <p><strong>Endereço:</strong> Rua dos Sabores, 123, Centro</p>
+                        <p><strong>Telefone:</strong> (31) 1234-5678</p>
+                        <p><strong>Email:</strong> contato@deliciopao.com.br</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Horário de Funcionamento</h5>
+                        <p>Segunda a Sexta: 7h - 19h</p>
+                        <p>Sábado: 8h - 18h</p>
+                        <p>Domingo: 8h - 13h</p>
+                    </div>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
+    
