Criando e finalizando a página Pão de Doce

--- a/PadariaDelicioPao/paes.html
+++ b/PadariaDelicioPao/paes.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão de Doce</h5>
                         <p class="card-text">Perfeito para adoçar o dia.</p>
-                        <a href="paodoce.html" class="btn btn-outline-dark">Mais informações</a>
+                        <a href="paodedoce.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pão com Mussarela</h5>
                         <p class="card-text">Cobertura de queijo irresistível.</p>
-                        <a href="paomussarela.html" class="btn btn-outline-dark">Mais informações</a>
+                        <a href="paocommussarela.html" class="btn btn-outline-dark">Mais informações</a>
                     </div>
                 </div>
             </div>
