Adicionando footer a paǵina Pão de Doce

--- a/PadariaDelicioPao/paofrances.html
+++ b/PadariaDelicioPao/paofrances.html
@@ -44,3 +44,29 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/paofrances.jpg" alt="Pão Francês" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                </div>
+                <h1 class="cursive-text mb-4">Pão Francês</h1>
+                <p class="lead">Crocante por fora e macio por dentro, perfeito para qualquer ocasião.</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>Nosso pão francês é feito com farinha de trigo selecionada, fermentação natural e assado até atingir a crocância perfeita. Ideal para acompanhar café da manhã, lanches e refeições.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>R$ 1,50 por unidade.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="text-center mt-5">
+                <a href="paes.html" class="btn btn-outline-dark">Voltar para os Pães</a>
+            </section>
+        </main>
