--- a/PadariaDelicioPao/paoitaliano.html
+++ b/PadariaDelicioPao/paoitaliano.html
@@ -44,3 +44,57 @@
                 </form>
             </div>
         </nav>
+        <main class="container mt-5 mb-5">
+            <section class="text-center">
+                <div>
+                    <img src="img/paoitaliano.jpg" alt="Pão Italiano" class="img-fluid mt-3" style="max-width: 400px; border-radius: 10px;">
+                </div>
+                <h1 class="cursive-text mb-4">Pão Italiano</h1>
+                <p class="lead">Casca crocante e miolo macio, perfeito para acompanhar sopas e antepastos.</p>
+            </section>
+            <section class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>Descrição</h4>
+                            <p>Nosso pão italiano segue a tradição europeia, com fermentação natural que garante um sabor autêntico e textura irresistível. Sua casca crocante contrasta perfeitamente com o interior macio e aerado.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Harmonização</h4>
+                            <p>Ideal para ser servido com azeite, queijos, antepastos ou como base para bruschettas. Também é uma excelente opção para acompanhar sopas e molhos encorpados.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h4>Preço</h4>
+                            <p>R$ 10,00 por unidade.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+    
+            <section class="text-center mt-5">
+                <a href="paes.html" class="btn btn-outline-dark">Voltar para os Pães</a>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>Sobre Nós</h5>
+                        <p>Na Delicio Pão, oferecemos produtos artesanais frescos todos os dias. Nosso compromisso é com a qualidade e o sabor.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contato</h5>
+                        <p><strong>Endereço:</strong> Rua dos Sabores, 123, Centro</p>
+                        <p><strong>Telefone:</strong> (31) 1234-5678</p>
+                        <p><strong>Email:</strong> contato@deliciopao.com.br</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Horário de Funcionamento</h5>
+                        <p>Segunda a Sexta: 7h - 19h</p>
+                        <p>Sábado: 8h - 18h</p>
+                        <p>Domingo: 8h - 13h</p>
+                    </div>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
